[package]
name = "logging"
version = "0.1.0"
authors = ["Ivan Krivosheev <py.krivosheev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"

env_logger = "0.8.3"

serde = "1"
serde_json = "1"
serde_urlencoded = "0.7.0"

clap = "2.33.3"
clickhouse-rs = "0.1.21"

