[package]
name = "logging"
version = "0.1.0"
authors = ["Ivan Krivosheev <py.krivosheev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.6"

env_logger = "0.8.3"
log = { version = "0.4", features = ["std"] }

serde = "1"
serde_json = "1"
serde_urlencoded = "0.7.0"

clap = "2.33.3"

clickhouse-rs = "1.0.0-alpha.1"
futures-util = { version = "0.3", features = [ "std", "sink", "async-await" ] }
futures-channel = { version = "0.3", features = [ "std", "sink" ] }
